--- a/index_img.html
+++ b/index_img.html
@@ -3,6 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>红河学院疫情防控信息上报</title>
+		<style type="text/css">
+			body{
+				margin: 0;
+				padding: 0;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="app">
